# DHBW-Web-Engineering-2-cloudstart

./: README.md  docker-compose.yml  init.bat  init.sh
backend/: .env  Cargo.toml  Dockerfile
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20221103_211114_create_todo_table.rs
backend/src/: db.rs  main.rs  pool.rs
backend/src/entity/: todo.rs
dev/etc/nginx/conf.d/: default.conf
dev/etc/nginx/inc/: default.conf
frontend/: .dockerignore  Dockerfile  angular.json  package-lock.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.html  app.module.ts  todo.service.ts  todo.ts
frontend/src/app/add/: add.component.css  add.component.html  add.component.ts
frontend/src/app/list/: confirm-deletion-dialog.html  list.component.css  list.component.html  list.component.ts
src/main/kotlin/com/egotec/starterproject/: TodoAPI.kt
