[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.147"
serde_json = "1.0.87"
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
sea-orm-rocket = "0.5.1"
dotenvy = "0.15"
tokio = "1.21.2"
async-trait = "0.1.58"

migration = { path = "./migration" }
